[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
description = "FFmpeg bindings for Rust (part of the SQA project)"
documentation = "https://docs.rs/sqa-ffmpeg"
keywords = ["ffmpeg", "audio", "sqa"]
license = "CC0-1.0"
name = "sqa-ffmpeg"
readme = "README.md"
repository = "https://github.com/eeeeeta/sqa"
version = "0.3.0"

[dependencies]
chrono = "0.4.6"
failure = "0.1.3"
failure_derive = "0.1.3"
libc = "0.2.43"
sample = "0.10.0"

[dependencies.ffmpeg-sys]
git = "https://github.com/meh/rust-ffmpeg-sys"

[dev-dependencies]

[dev-dependencies.sqa-engine]
version = "0.3.0"
